--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,3 @@
-/* 
-red - 	#DE4256 - hsla(352, 70%, 56%, 1)
-dark green - #011E06 - hsla(130, 94%, 6%, 1)
-light green - #008F47 - hsla(150, 100%, 28%, 1)
-silver - #C0C0C0
-gold - #D4AF37
-*/
-
 #header {
 	background: rgba(255, 255, 255, 0);
 	display: flex;
@@ -24,25 +16,53 @@ gold - #D4AF37
 	justify-content: space-around;
 	border-top: 1px solid white;
 	border-bottom: 1px solid white;
-	padding: 1.5vh;
+	padding: .2vh 0;
 }
 
 a {
 	color: white;
 	text-decoration: none;
 	padding: 2vh;
+	text-align: center;
 }
 
+
 a:hover {
-	background: hsla(352, 70%, 56%, .5);
 	text-decoration: underline;
 }
 
-@media only screen and (max-height: 400px){
-	a {
-		padding: 4vh;
+/*responsive font size in header*/
+
+#header {
+	font-size: 1.6vw;
+}
+@media only screen and (max-width: 1000px){
+	#header{
+		font-size: 1.8vw;
 	}
+}
+@media only screen and (max-width: 800px){
 	#nav-ul {
-		padding: 3vh;
+		font-size: 2.5vw;
+	}
+}
+@media only screen and (max-width: 650px){
+	#header{
+		font-size: 2.2vw;
+	}
+}
+@media only screen and (max-width: 550px){
+	#nav-ul {
+		font-size: 3.5vw;
+	}
+}
+@media only screen and (max-width: 450px){
+	#header{
+		font-size: 2.5vw;
+	}
+}
+@media only screen and (min-aspect-ratio: 18/10) {
+	h1{
+		margin: 0;
 	}
 }
