--- a/src/components/main/css/wishlist.css
+++ b/src/components/main/css/wishlist.css
@@ -7,6 +7,18 @@
 	border-radius: 10px;
 }
 
+.coming-soon {
+	font-family: 'Carter One', cursive;
+	font-size: 5vmax;
+	text-align: center;
+	color: #ff1a1a;
+	text-shadow:
+    	-1px -1px 0 #000,  
+    	1px -1px 0 #000,
+    	-1px 1px 0 #000,
+    	1px 1px 0 #000;
+}
+
 ul#wishlist-ul {
 	padding: 3vw 3vw 3vw 8vw;
 }
