--- a/src/components/main/main-components/dice.css
+++ b/src/components/main/main-components/dice.css
@@ -42,152 +42,152 @@
 }
 
 @keyframes spin {
-    0% { transform: translateZ(var(--dice-z)) rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
-    16% { transform: translateZ(var(--dice-z)) rotateX(180deg) rotateY(180deg) rotateZ(0deg); }
-    33% { transform: translateZ(var(--dice-z)) rotateX(360deg) rotateY(90deg) rotateZ(180deg); }
-    50% { transform: translateZ(var(--dice-z)) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
-    66% { transform: translateZ(var(--dice-z)) rotateX(180deg) rotateY(360deg) rotateZ(270deg); }
-    83% { transform: translateZ(var(--dice-z)) rotateX(270deg) rotateY(180deg) rotateZ(180deg); }
-    100% { transform: translateZ(var(--dice-z)) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
+    0% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
+    16% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(180deg) rotateY(180deg) rotateZ(0deg); }
+    33% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(360deg) rotateY(90deg) rotateZ(180deg); }
+    50% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
+    66% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(180deg) rotateY(360deg) rotateZ(270deg); }
+    83% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(270deg) rotateY(180deg) rotateZ(180deg); }
+    100% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
 }
 @keyframes spin-duplicate {
-    0% { transform: translateZ(var(--dice-z)) rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
-    16% { transform: translateZ(var(--dice-z)) rotateX(180deg) rotateY(180deg) rotateZ(0deg); }
-    33% { transform: translateZ(var(--dice-z)) rotateX(360deg) rotateY(90deg) rotateZ(180deg); }
-    50% { transform: translateZ(var(--dice-z)) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
-    66% { transform: translateZ(var(--dice-z)) rotateX(180deg) rotateY(360deg) rotateZ(270deg); }
-    83% { transform: translateZ(var(--dice-z)) rotateX(270deg) rotateY(180deg) rotateZ(180deg); }
-    100% { transform: translateZ(var(--dice-z)) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
+    0% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
+    16% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(180deg) rotateY(180deg) rotateZ(0deg); }
+    33% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(360deg) rotateY(90deg) rotateZ(180deg); }
+    50% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
+    66% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(180deg) rotateY(360deg) rotateZ(270deg); }
+    83% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(270deg) rotateY(180deg) rotateZ(180deg); }
+    100% { transform: translateZ(var(--dice-z)) translateY(var(--dice-y)) translateX(var(--dice-x)) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
 }
 
 @keyframes fly-away {
-    0% { transform: 
-        translateX(0) 
+    0% { transform:
+        translateX(0)
         translateY(var(--dice-y))
         translateZ(var(--dice-z))
         rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
-    8% { transform: 
-        translateX(0) 
+    8% { transform:
+        translateX(0)
         translateY(var(--dice-y)) translateY(-10vh)
         translateZ(var(--dice-z)) translateZ(300px)
         rotateX(180deg) rotateY(180deg) rotateZ(45deg); }
-    16% { transform: 
-        translateX(0) 
+    16% { transform:
+        translateX(0)
         translateY(var(--dice-y)) translateY(-20vh)
-        translateZ(var(--dice-z)) translateZ(600px) 
+        translateZ(var(--dice-z)) translateZ(600px)
         rotateX(360deg) rotateY(270deg) rotateZ(90deg); }
-    24% { transform: 
-        translateX(0) 
+    24% { transform:
+        translateX(0)
         translateY(var(--dice-y)) translateY(-30vh)
-        translateZ(var(--dice-z)) translateZ(900px) 
+        translateZ(var(--dice-z)) translateZ(900px)
         rotateX(450deg) rotateY(360deg) rotateZ(135deg); }
-    33% { transform: 
-        translateX(var(--dice-x)) translateX(20vw) 
+    33% { transform:
+        translateX(var(--dice-x)) translateX(20vw)
         translateY(var(--dice-y))
-        translateZ(var(--dice-z)) translateZ(450px) 
+        translateZ(var(--dice-z)) translateZ(450px)
         rotateX(360deg) rotateY(270deg) rotateZ(180deg); }
-    41% { transform: 
-        translateX(var(--dice-x)) translateX(40vw) 
+    41% { transform:
+        translateX(var(--dice-x)) translateX(40vw)
         translateY(var(--dice-y)) translateY(-20vh)
         translateZ(var(--dice-z))
         rotateX(180deg) rotateY(180deg) rotateZ(135deg); }
-    50% { transform: 
-        translateX(var(--dice-x)) translateX(20vw) 
+    50% { transform:
+        translateX(var(--dice-x)) translateX(20vw)
         translateY(var(--dice-y)) translateY(-40vh)
-        translateZ(var(--dice-z)) translateZ(-300px) 
+        translateZ(var(--dice-z)) translateZ(-300px)
         rotateX(360deg) rotateY(90deg) rotateZ(90deg); }
-    58% { transform: 
-        translateX(var(--dice-x)) translateX(0) 
+    58% { transform:
+        translateX(var(--dice-x)) translateX(0)
         translateY(var(--dice-y)) translateY(-60vh)
-        translateZ(var(--dice-z)) translateZ(-600px) 
+        translateZ(var(--dice-z)) translateZ(-600px)
         rotateX(450deg) rotateY(0deg) rotateZ(45deg); }
-    66% { transform: 
-        translateX(var(--dice-x-neg)) translateX(-20vw) 
+    66% { transform:
+        translateX(var(--dice-x-neg)) translateX(-20vw)
         translateY(var(--dice-y)) translateY(-80vh)
-        translateZ(var(--dice-z)) translateZ(-900px) 
+        translateZ(var(--dice-z)) translateZ(-900px)
         rotateX(540deg) rotateY(90deg) rotateZ(90deg); }
-    74% { transform: 
-        translateX(var(--dice-x-neg)) translateX(-40vw) 
+    74% { transform:
+        translateX(var(--dice-x-neg)) translateX(-40vw)
         translateY(var(--dice-y)) translateY(-100vh)
-        translateZ(var(--dice-z)) translateZ(-1200px) 
+        translateZ(var(--dice-z)) translateZ(-1200px)
         rotateX(630deg) rotateY(180deg) rotateZ(135deg); }
-    83% { transform: 
-        translateX(var(--dice-x-neg)) translateX(-60vw) 
+    83% { transform:
+        translateX(var(--dice-x-neg)) translateX(-60vw)
         translateY(var(--dice-y)) translateY(-120vh)
-        translateZ(var(--dice-z)) translateZ(-1500px) 
+        translateZ(var(--dice-z)) translateZ(-1500px)
         rotateX(720deg) rotateY(270deg) rotateZ(180deg); }
-    91% { transform: 
-        translateX(var(--dice-x-neg)) translateX(-80vw) 
+    91% { transform:
+        translateX(var(--dice-x-neg)) translateX(-80vw)
         translateY(var(--dice-y)) translateY(-140vh)
-        translateZ(var(--dice-z)) translateZ(-1800px) 
+        translateZ(var(--dice-z)) translateZ(-1800px)
         rotateX(630deg) rotateY(180deg) rotateZ(135deg); }
-    100% { transform: 
-        translateX(var(--dice-x-neg)) translateX(0vw) 
+    100% { transform:
+        translateX(var(--dice-x-neg)) translateX(0vw)
         translateY(var(--dice-y)) translateY(-160vh)
-        translateZ(var(--dice-z))
+        translateZ(var(--dice-z))translateZ(-1800px)
         rotateX(540deg) rotateY(90deg) rotateZ(90deg); }
 }
 
 @keyframes dance {
-    0% { transform: 
+    0% { transform:
         translateX(var(--dice-x))
         translateY(var(--dice-y))
         translateZ(var(--dice-z))
         rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
-    10% { transform: 
+    10% { transform:
         translateX(var(--dice-x)) translateX(-10vw)
         translateY(var(--dice-y)) translateY(-20vh)
         translateZ(var(--dice-z)) translateZ(300px)
         rotateX(180deg) rotateY(180deg) rotateZ(45deg); }
-    20% { transform: 
+    20% { transform:
         translateX(var(--dice-x)) translateX(-15vw)
         translateY(var(--dice-y)) translateY(-20vh)
-        translateZ(var(--dice-z)) translateZ(600px) 
+        translateZ(var(--dice-z)) translateZ(600px)
         rotateX(360deg) rotateY(270deg) rotateZ(90deg); }
-    30% { transform: 
+    30% { transform:
         translateX(var(--dice-x)) translateX(-10vw)
         translateY(var(--dice-y)) translateY(-20vh)
-        translateZ(var(--dice-z)) translateZ(300px) 
+        translateZ(var(--dice-z)) translateZ(300px)
         rotateX(450deg) rotateY(360deg) rotateZ(135deg); }
-    40% { transform: 
-        translateX(var(--dice-x)) translateX(30vw) 
+    40% { transform:
+        translateX(var(--dice-x)) translateX(30vw)
         translateY(var(--dice-y)) translateY(-20vh)
-        translateZ(var(--dice-z)) translateZ(0px) 
+        translateZ(var(--dice-z)) translateZ(0px)
         rotateX(360deg) rotateY(270deg) rotateZ(180deg); }
-    50% { transform: 
-        translateX(var(--dice-x)) translateX(40vw) 
+    50% { transform:
+        translateX(var(--dice-x)) translateX(40vw)
         translateY(var(--dice-y)) translateY(-20vh)
         translateZ(var(--dice-z))
         rotateX(180deg) rotateY(180deg) rotateZ(135deg); }
-    50% { transform: 
-        translateX(var(--dice-x)) translateX(20vw) 
+    50% { transform:
+        translateX(var(--dice-x)) translateX(20vw)
         translateY(var(--dice-y)) translateY(-40vh)
-        translateZ(var(--dice-z)) translateZ(-300px) 
+        translateZ(var(--dice-z)) translateZ(-300px)
         rotateX(360deg) rotateY(90deg) rotateZ(90deg); }
-    60% { transform: 
-        translateX(var(--dice-x)) translateX(0) 
+    60% { transform:
+        translateX(var(--dice-x)) translateX(0)
         translateY(var(--dice-y)) translateY(-60vh)
-        translateZ(var(--dice-z)) translateZ(-600px) 
+        translateZ(var(--dice-z)) translateZ(-600px)
         rotateX(450deg) rotateY(0deg) rotateZ(45deg); }
-    70% { transform: 
-        translateX(var(--dice-x-neg)) translateX(-20vw) 
+    70% { transform:
+        translateX(var(--dice-x-neg)) translateX(-20vw)
         translateY(var(--dice-y)) translateY(-80vh)
-        translateZ(var(--dice-z)) translateZ(-900px) 
+        translateZ(var(--dice-z)) translateZ(-900px)
         rotateX(540deg) rotateY(90deg) rotateZ(90deg); }
-    80% { transform: 
-        translateX(var(--dice-x-neg)) translateX(-40vw) 
+    80% { transform:
+        translateX(var(--dice-x-neg)) translateX(-40vw)
         translateY(var(--dice-y)) translateY(-100vh)
-        translateZ(var(--dice-z)) translateZ(-1200px) 
+        translateZ(var(--dice-z)) translateZ(-1200px)
         rotateX(630deg) rotateY(180deg) rotateZ(135deg); }
-    90% { transform: 
-        translateX(var(--dice-x-neg)) translateX(-60vw) 
+    90% { transform:
+        translateX(var(--dice-x-neg)) translateX(-60vw)
         translateY(var(--dice-y)) translateY(-120vh)
-        translateZ(var(--dice-z)) translateZ(-1500px) 
+        translateZ(var(--dice-z)) translateZ(-1500px)
         rotateX(720deg) rotateY(270deg) rotateZ(180deg); }
-    100% { transform: 
-        translateX(var(--dice-x-neg)) translateX(-80vw) 
+    100% { transform:
+        translateX(var(--dice-x-neg)) translateX(-80vw)
         translateY(var(--dice-y)) translateY(-140vh)
-        translateZ(var(--dice-z)) translateZ(-1800px) 
+        translateZ(var(--dice-z)) translateZ(-1800px)
         rotateX(630deg) rotateY(180deg) rotateZ(135deg); }
 }
 
@@ -200,25 +200,25 @@
 #dice.dance {
     animation: dance 2s infinite linear;
     animation-direction: alternate;
-    z-index: 2;   
+    z-index: 2;
 }
 
 #dice.pause{
-    animation-play-state: paused; 
+    animation-play-state: paused;
 }
 
 #roll-label.select {
     text-shadow:0 -1px 0 #336633;
     border-color:#66FF99;
     background: linear-gradient(to bottom, #66CC66 0%,#336633 100%);
+    z-index: 3;
 }
 
-#roll:checked ~ #platform > #dice {
+#dice.spin {
     animation: spin-duplicate 2s infinite linear;
 }
 #roll:checked ~ #platform {
     width:200px;
-    height:200px;
     transform-style: preserve-3d;
     animation: roll 1.6s infinite linear;
 }
@@ -236,7 +236,7 @@
     position:absolute;
     margin:100px 0 0 100px;
     display: block;
-    font-size: 2.5em;
+    font-size: 20px;
     padding: 10px;
 }
 #dice {
@@ -245,7 +245,7 @@
     height: 200px;
     transform-style: preserve-3d;
     animation: spin 50s infinite linear;
-    font-family: 'Pacifico', cursive;    
+    font-family: 'Pacifico', cursive;
 }
 .side {
     position: absolute;
@@ -314,10 +314,10 @@
     justify-content: center;
     align-content: center;
     text-align: center;
-    font-size: 8vh;
+    font-size: 60px;
     color: #66CC66;
     text-shadow:
-        -2px -2px 0 #f00,  
+        -2px -2px 0 #f00,
         2px -2px 0 #f00,
         -2px 2px 0 #f00,
         2px 2px 0 #f00;
@@ -356,7 +356,7 @@
 	box-shadow:0 0 18px rgba(255,255,255,.5);
 }
 .dice-label[for=roll] {
-	z-index:1;
+	z-index: 3 ;
 	text-shadow:0 -1px 0 #006699;
 	border-color:#17C7EC;
 	background: linear-gradient(to bottom, #0099CC 0%,#006699 100%);
