--- a/src/components/main/css/wishlist.css
+++ b/src/components/main/css/wishlist.css
@@ -1,65 +1,144 @@
+#wishlist-container {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 3fr 7fr;
+}
+
 #parchment {
-	background: url('parchment.jpg');
-	background-size: cover;
-	margin: auto;
-	width: 50vw;
-	border: 1px solid #fff;
-	border-radius: 10px;
+  background: url("parchment.jpg");
+  background-size: cover;
+  margin: 5vh auto;
+  width: 50vw;
+  border: 2px solid var(--black);
+  border-radius: 10px;
+  transition-duration: 0.4s;
+  box-shadow: -10px 10px 15px 0 #222a, -10px 15px 30px 0 #222a;
+}
+
+.arrowSvg {
+  display: flex;
+  height: 20%;
+  width: 20%;
+}
+
+.arrow {
+  fill: var(--red);
+  stroke: #222;
+  stroke-width: 10;
 }
 
 .coming-soon {
-	font-family: 'Carter One', cursive;
-	font-size: 5vmax;
-	text-align: center;
-	color: #ff1a1a;
-	text-shadow:
-    	-1px -1px 0 #000,
-    	1px -1px 0 #000,
-    	-1px 1px 0 #000,
-    	1px 1px 0 #000;
+  font-family: "Carter One", cursive;
+  font-size: 5vmax;
+  text-align: center;
+  color: var(--red);
+  text-shadow: -1px -1px 0 #222, 1px -1px 0 #222, -1px 1px 0 #222,
+    1px 1px 0 #222;
 }
 
 ul#wishlist-ul {
-	padding: 3vw;
+  padding: 3vw;
 }
 
 li.wishlist-li {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	width: 100%;
-	font-family: 'Pacifico', cursive;
-	list-style-type: none;
-	color: black;
-	margin-bottom: 2.5vw;
-	text-shadow: -3px 3px 2px rgba(0, 0, 0, 0.5);
-
-	font-size: 3vw;
-	line-height: 3.5vw
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 100%;
+  font-family: "Pacifico", cursive;
+  list-style-type: none;
+  color: #222;
+  text-shadow: -3px 3px 2px #fffa;
+  font-size: 3vw;
+  line-height: 3.5vw;
 }
 
-a.giftName{
-	color: black;
-	width: 80%;
-	text-align: left;
-	margin-left: 3vw;
-	transition-duration: 0.4s;
+.giftName {
+  color: #222;
+  width: 80%;
+  text-align: left;
+  margin-left: 1vw;
+  transition-duration: 0.4s;
+  margin-top: 0;
+  margin-bottom: 2.5vh;
+  padding: 1vw;
 }
 
-a.giftName:hover{
-	color: rgb(4, 166, 65);
-	text-shadow:
-		-1px -1px 0 #fff,
-		1px -1px 0 #fff,
-		-1px 1px 0 #fff,
-		1px 1px 0 #fff;
+.giftName:last-of-type {
+  margin-bottom: 5vh;
 }
 
-.editBtn{
+a.giftName:hover {
+  color: var(--red);
+  text-shadow: -1px -1px 0 var(--white), 1px -1px 0 var(--white),
+    -1px 1px 0 var(--white), 1px 1px 0 var(--white);
+}
+
+#newItemContainer {
+  display: flex;
+  flex-direction: columns;
+}
+.fakeBtnContainer {
+  width: 80%;
+  margin-left: 1vw;
+}
+.fakeBtn {
+  display: flex;
+  width: 40%;
+  padding: 5px 0;
+  border-radius: 8px;
+  font-family: "Carter One", cursive;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  color: var(--green);
+  border: 2px solid var(--red);
+  background-color: var(--white);
+  transition-duration: 0.4s;
+  box-shadow: -5px 5px 5px 0 #ff1a1a33, -8px 8px 5px 0 #ff1a1a33;
+}
+
+.notFakeBtn {
+  background: none;
+  border: none;
+  cursor: auto;
+  color: #222;
+  font-size: 3vw;
+  font-family: "Pacifico", cursive;
+  text-shadow: -3px 3px 2px #fffa;
+  width: 100%;
+  text-align: left;
+  margin-left: 1vw;
+  transition-duration: 0.4s;
+  box-shadow: none;
+}
+
+#parchment:after {
+  content: var(--pressEnter);
+  display: flex;
+  justify-content: center;
+  color: var(--red);
+  margin: auto;
+  font-family: "Carter One", cursive;
+  font-size: var(--pressEnterSize);
+  text-align: center;
+  z-index: 3;
+  transition-duration: 0.4s;
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+    1px 1px 0 #fff;
+}
+
+.notFakeBtn:focus,
+input:focus {
+  outline: 0;
+}
+
+/* .fakeBtnContainer:after{
+	content: '';
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	width: 10%;
+	width: 40%;
 	padding: 5px 0;
 	align-self: center;
 	margin: auto;
@@ -67,27 +146,233 @@ a.giftName:hover{
 	font-family:  'Carter One', cursive;
 	font-size: 1rem;
 
-	color: #fff;
-	border: 2px solid #fff;
-	background-color: rgb(4, 166, 65);
+	color: var(--white);
+	border: 2px solid var(--white);
+	background-color: var(--green);
 	transition-duration: 0.4s;
+} */
+
+.fakeBtn::placeholder {
+  color: inherit;
+  text-align: center;
 }
 
-.editBtn:hover {
-	color: #ff1a1a;
-	border: 2px solid #ff1a1a;
-	background-color: #fff;
-	box-shadow: -10px 10px 15px 0 rgba(4, 166, 65,0.76), -10px 15px 30px 0 rgba(4, 166, 65,0.7);
+.fakeBtn:hover {
+  color: var(--red);
+  border: 2px solid var(--red);
+  background-color: var(--white);
+  box-shadow: -5px 5px 5px 0 rgba(4, 166, 65, 0.4),
+    -8px 8px 5px 0 rgba(4, 166, 65, 0.4);
 }
 
-@media only screen and (max-width: 1000px){
-	#parchment{
-		width: 70vw;
-	}
+.notFakeBtn:hover {
+  color: #222;
+  border: none;
+  background: none;
+  box-shadow: none;
 }
 
-@media only screen and (max-width: 750px){
-	#parchment{
-		width: 85vw;
-	}
+.advancedBtnContainer {
+  width: 20%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.advancedBtn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: auto;
+  padding: 5px 5px;
+  align-self: center;
+  margin: auto;
+  border-radius: 8px;
+  font-family: "Carter One", cursive;
+  font-size: 1rem;
+  color: var(--green);
+  border: 2px solid var(--red);
+  background-color: var(--white);
+  transition-duration: 0.4s;
+  box-shadow: -5px 5px 5px 0 #ff1a1a33, -8px 8px 5px 0 #ff1a1a33;
+}
+.advancedBtn:hover {
+  color: var(--red);
+  border: 2px solid var(--red);
+  background-color: var(--white);
+  box-shadow: -5px 5px 5px 0 rgba(4, 166, 65, 0.4),
+    -8px 8px 5px 0 rgba(4, 166, 65, 0.4);
+}
+
+#none {
+  display: none;
+}
+
+#moreOptionsContainer {
+  background: #ff1a1a88;
+  height: 87.5vh;
+  width: 50vw;
+  margin: auto;
+  margin-bottom: 15vh;
+  border-radius: 15px;
+  border: solid 1px var(--red);
+  position: fixed;
+  top: 8vh;
+  left: 25vw;
+  display: grid;
+  grid-template-columns: 1fr 5fr 13fr 1fr;
+  grid-template-rows: 3fr 3fr 3fr 8fr 3fr;
+  grid-template-areas:
+    "top top   top top"
+    ". label1 input1 ."
+    ". label2 input2 ."
+    ". label3 input3 ."
+    "bot bot   bot bot";
+  font-family: "Carter One", cursive;
+  font-size: 4vh;
+  color: var(--red);
+  text-align: center;
+  text-shadow: -1px -1px 0 #222, 1px -1px 0 #222, -1px 1px 0 #222,
+    1px 1px 0 #222;
+}
+
+#topBottomBorder {
+}
+
+#topBottomBorder:before {
+  content: "";
+  background: var(--white);
+  height: 15%;
+  width: 100%;
+  position: absolute;
+  top: 74.4vh;
+  border-radius: 0 0 15px 15px;
+  z-index: 0;
+}
+
+#topBottomBorder:after {
+  content: "";
+  background: var(--white);
+  height: 15%;
+  width: 100%;
+  position: absolute;
+  top: 0vh;
+  border-radius: 15px 15px 0 0;
+  z-index: 0;
+}
+
+#leftRightBorder:after {
+  content: "";
+  background: var(--white);
+  height: 90%;
+  width: 5%;
+  position: absolute;
+  top: 0vh;
+  border-radius: 15px 15px 0 0;
+  z-index: 0;
+}
+#leftRightBorder:before {
+  content: "";
+  background: var(--white);
+  height: 90%;
+  width: 5%;
+  position: absolute;
+  top: 0vh;
+  left: 47.5vw;
+  border-radius: 15px 15px 0 0;
+  z-index: 0;
+}
+
+#bottomBar {
+  grid-area: bot;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#topBar {
+  grid-area: top;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  margin: auto;
+  z-index: 2;
+}
+
+#submitItemBtn,
+#cancelItemBtn {
+  display: flex;
+  justify-content: center;
+  width: 40%;
+  max-height: 40px;
+  padding: 5px 0;
+  border-radius: 8px;
+  font-family: "Carter One", cursive;
+  font-size: 1rem;
+  cursor: pointer;
+  align-self: center;
+  text-align: center;
+  margin: auto;
+  color: var(--green);
+  border: 2px solid var(--red);
+  background-color: var(--white);
+  transition-duration: 0.4s;
+  z-index: 2;
+  box-shadow: -5px 5px 5px 0 #ff1a1a33, -8px 8px 5px 0 #ff1a1a33;
+}
+
+.itemLabels:first-of-type {
+  grid-area: label1;
+}
+
+.itemLabels:nth-of-type(2) {
+  grid-area: label2;
+}
+
+.itemLabels:last-of-type {
+  grid-area: label3;
+}
+
+.itemLabels {
+  align-self: center;
+  color: var(--green);
+  text-shadow: -1px -1px 0 #222, 1px -1px 0 #222, -1px 1px 0 #222,
+    1px 1px 0 #222;
+}
+
+.optionsInput {
+  margin: 3vmin;
+}
+
+#itemName {
+  grid-area: input1;
+}
+
+#itemLink {
+  grid-area: input2;
+}
+
+#itemComment {
+  grid-area: input3;
+}
+
+#submitItemBtn:hover,
+#cancelItemBtn:hover {
+  color: var(--red);
+  border: 2px solid var(--red);
+  background-color: var(--white);
+  box-shadow: -5px 5px 5px 0 rgba(4, 166, 65, 0.4),
+    -8px 8px 5px 0 rgba(4, 166, 65, 0.4);
+}
+
+@media only screen and (max-width: 1000px) {
+  #parchment {
+    width: 70vw;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  #parchment {
+    width: 85vw;
+  }
 }
