--- a/src/components/main/css/signin.css
+++ b/src/components/main/css/signin.css
@@ -1,21 +1,21 @@
 .signInForm {
-	background: rgba(255, 0, 0, .6);
+	background: #ff1a1a88;
 	height: 64vh;
 	width: 50vw;
 	margin: auto;
 	border-radius: 15px;
-	border: solid 1px black;
+	border: solid 1px #222;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	font-family: 'Carter One', cursive;
 	font-size: 4vh;
-	color: white;
+	color: var(--white);
 	text-shadow:
-    	-1px -1px 0 #000,  
-    	1px -1px 0 #000,
-    	-1px 1px 0 #000,
-    	1px 1px 0 #000;
+    	-1px -1px 0 #222,
+    	1px -1px 0 #222,
+    	-1px 1px 0 #222,
+    	1px 1px 0 #222;
 }
 
 .welcomeDiv {
@@ -24,15 +24,15 @@
 	justify-content: space-around;
 	width: 100%;
 	height: 20%;
-	background: rgba(255, 255, 255, 1);
+	background: var(--white);
 	border-radius: 13px 13px 0px 0px;
 	text-align: center;
-	color: #ff1a1a;
+	color: var(--red);
 	text-shadow:
-    	-1px -1px 0 #000,  
-    	1px -1px 0 #000,
-    	-1px 1px 0 #000,
-    	1px 1px 0 #000;
+    	-1px -1px 0 #222,
+    	1px -1px 0 #222,
+    	-1px 1px 0 #222,
+    	1px 1px 0 #222;
 }
 
 .signInInfoDiv {
@@ -44,7 +44,7 @@
 
 .infoDivSpacer {
 	width:5%;
-	background: rgba(255, 255, 255, 1);
+	background: var(--white);
 }
 
 .signInLabelsDiv {
@@ -63,7 +63,7 @@
 
 .signInSubmitDiv {
 	display: flex;
-	background: rgba(255, 255, 255, 1);
+	background: var(--white);
 	width: 100%;
 	height: 15%;
 	flex-direction: column;
@@ -89,12 +89,12 @@
 }
 .signInInputs:focus{
 	outline: none;
-	box-shadow: -2px -2px 10px 0 rgba(255, 255, 255, 1);
+	box-shadow: -2px -2px 10px 0 var(--white);
 }
 
 .signInSubmit:hover, .signInSubmit:focus{
 	outline: none;
-	box-shadow: -2px -2px 10px 0 rgba(255, 0, 0, 1);
+	box-shadow: -2px -2px 10px 0 var(--red);
 }
 
 .signInLabels {
