--- a/src/components/main/css/wishlist.css
+++ b/src/components/main/css/wishlist.css
@@ -15,8 +15,123 @@
   box-shadow: -10px 10px 15px 0 #222a, -10px 15px 30px 0 #222a;
 }
 
+.deleteSvg {
+  height: 100%;
+  width: 100%;
+}
+
+.deleteWrapper {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 10%;
+}
+
+.deleteSvgBody {
+  stroke: #222;
+  stroke-width: 10;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+.deleteSvgBody:hover {
+  stroke: #222;
+  stroke-width: 18;
+}
+
+#deleteDialog {
+  display: grid;
+  grid-template-columns: 1fr 5fr 5fr 1fr;
+  grid-template-rows: 1fr 3fr 3fr 1fr;
+  grid-template-areas:
+    "top   top   top   top"
+    "l question question r"
+    "l  delete   cancel  r"
+    "bot   bot   bot   bot";
+  position: fixed;
+  height: 30vh;
+  width: 35vw;
+  background: #ff1a1a88;
+  top: 35vh;
+  left: 5vw;
+  border-radius: 15px;
+  border: solid 1px var(--red);
+}
+
+#deleteDialogTop,
+#deleteDialogBottom,
+#deleteDialogLeft,
+#deleteDialogRight {
+  background: var(--white);
+}
+
+#deleteDialogTop {
+  grid-area: top;
+  border-radius: 15px 15px 0 0;
+}
+#deleteDialogBottom {
+  grid-area: bot;
+  border-radius: 0 0 15px 15px;
+}
+#deleteDialogLeft {
+  grid-area: l;
+}
+#deleteDialogRight {
+  grid-area: r;
+}
+
+#deleteQuestion {
+  grid-area: question;
+  font-family: "Carter One", cursive;
+  font-size: 3vh;
+  margin: auto;
+  color: var(--white);
+  text-align: center;
+  text-shadow: -1px -1px 0 #222, 1px -1px 0 #222, -1px 1px 0 #222,
+    1px 1px 0 #222;
+}
+
+#deleteDialogBtn {
+  grid-area: delete;
+}
+
+#cancelDialogBtn {
+  grid-area: cancel;
+}
+
+#deleteDialogBtn,
+#cancelDialogBtn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: auto;
+  padding: 5px 15px;
+  align-self: center;
+  margin: auto;
+  border-radius: 8px;
+  font-family: "Carter One", cursive;
+  font-size: 1rem;
+  color: var(--green);
+  border: 2px solid var(--red);
+  background-color: var(--white);
+  transition-duration: 0.4s;
+  box-shadow: -5px 5px 5px 0 #ff1a1a33, -8px 8px 5px 0 #ff1a1a33;
+}
+
+#deleteDialogBtn:hover,
+#cancelDialogBtn:hover {
+  color: var(--red);
+  border: 2px solid var(--red);
+  background-color: var(--white);
+  box-shadow: -5px 5px 5px 0 rgba(4, 166, 65, 0.4),
+    -8px 8px 5px 0 rgba(4, 166, 65, 0.4);
+}
+
 .arrowSvg {
   display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: auto;
   height: 20%;
   width: 20%;
 }
@@ -55,7 +170,7 @@ li.wishlist-li {
 
 .giftName {
   color: #222;
-  width: 80%;
+  width: 70%;
   text-align: left;
   margin-left: 1vw;
   transition-duration: 0.4s;
@@ -204,7 +319,7 @@ input:focus {
     -8px 8px 5px 0 rgba(4, 166, 65, 0.4);
 }
 
-#none {
+.none {
   display: none;
 }
 
